--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "bugs": {
     "url": "https://github.com/jmg2107/campcatering/issues"
   },
+  "scripts": {
+    "start": "node index.js"
+  },
   "homepage": "https://github.com/jmg2107/campcatering#readme",
   "dependencies": {
     "babel-cli": "^6.18.0",
