--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "camp catering website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,12 +15,11 @@
   "bugs": {
     "url": "https://github.com/jmg2107/campcatering/issues"
   },
-  "scripts": {
-    "start": "node index.js"
-  },
   "homepage": "https://github.com/jmg2107/campcatering#readme",
   "dependencies": {
     "babel-cli": "^6.18.0",
+    "babel-core": "^6.18.0",
+    "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "bootstrap": "^3.3.7",
@@ -31,6 +30,7 @@
     "mocha": "^3.1.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "sinon": "^1.17.6"
+    "sinon": "^1.17.6",
+    "webpack": "^1.13.3"
   }
 }
