--- a/package.json
+++ b/package.json
@@ -17,20 +17,12 @@
   },
   "homepage": "https://github.com/jmg2107/campcatering#readme",
   "dependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.0",
-    "babel-loader": "^6.2.7",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
     "bootstrap": "^3.3.7",
     "chai": "^3.5.0",
     "express": "^4.14.0",
     "jquery": "^3.1.1",
     "lodash": "^4.16.4",
     "mocha": "^3.1.2",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "sinon": "^1.17.6",
-    "webpack": "^1.13.3"
+    "sinon": "^1.17.6"
   }
 }
